--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -24,6 +24,7 @@ $breakpoint-tablets: 768px;
     font-family: $main-font;
 }
 
+//OPEN STYLES FOR HEADER
 header {
 
     //text above nav
@@ -43,7 +44,7 @@ header {
     div.container-nav {
         position: relative;
         display: flex;
-        box-shadow: 0 0 10px whitesmoke;
+        box-shadow: 0 0 10px #d2d2d2;
         padding-top: 70px;
 
         nav#main-navigation {
@@ -113,7 +114,7 @@ header {
 
                 div.account-icons {
                     a:nth-child(1) {
-                        margin-right: 10px;
+                        margin-right: 20px;
                         ;
                     }
 
@@ -130,7 +131,7 @@ header {
                 width: 100%;
 
                 ul.container-links {
-                    position: absolute;
+                    position: fixed;
                     top: 0;
                     left: 0;
                     display: flex;
@@ -140,6 +141,7 @@ header {
                     background: #222;
                     overflow: hidden;
                     transition: 0.3s height linear;
+                    z-index: 999;
 
                     li {
                         text-align: center;
@@ -193,6 +195,7 @@ header {
         }
     }
 }
+
 //Breackpoint mobile
 @media only screen and (min-width: $breakpoint-mobile) {
 
@@ -267,7 +270,7 @@ header {
                         background: white;
                         overflow: unset;
 
-                         li {
+                        li {
                             width: 100%;
                             padding: 15px 0;
                             border-bottom: none;
@@ -276,6 +279,7 @@ header {
                                 color: #444;
                             }
                         }
+
                         button {
                             display: none;
                         }
@@ -289,12 +293,14 @@ header {
         }
     }
 }
-@media only screen and (min-width: $breakpoint-tablets){
-    div.container-logo{
-        img{
+
+@media only screen and (min-width: $breakpoint-tablets) {
+    div.container-logo {
+        img {
             height: 60px;
         }
     }
+
     header div.text-top-menu {
         display: flex;
         flex-wrap: wrap;
@@ -302,8 +308,264 @@ header {
         justify-content: center;
         align-items: center;
 
-        h4:nth-child(2){
+        h4:nth-child(2) {
             margin: 0 50px;
         }
+    }
+}
+//CLOSE STYLES FOR HEADER
+
+
+main {
+    width: 100%;
+}
+
+//OPEN STYLES FIRST SECTION CAROUSEL
+section#apresentation-carousel {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    margin: 0 0px;
+
+    div.background-image {
+        position: absolute;
+        background-size: cover;
+        width: 100%;
+        height: 80%;
+        z-index: 0;
+    }
+
+    div.carousel-container {
+        position: absolute;
+        width: 88%;
+        height: 100%;
+        $qnt: 3;
+
+        div.carousel-item {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            div.container-text-carousel {
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                div.absItem {
+                    display: none!important;
+                }
+
+                p,
+                h1,
+                h3 {
+                    color: white;
+                    font-family: $main-font;
+                    text-shadow: 0 0 10px black;
+                }
+
+                h1 {
+                    font-size: 15vw;
+                    font-weight: 900;
+                }
+
+                h3 {
+                    font-size: 25px;
+                    font-weight: 200;
+                }
+
+                p {
+                    max-width: 250px;
+
+                }
+                div.buttons{
+                    display: flex;
+                    margin-top: 24px;
+                    button.btnGender{
+                        border: 1px solid white;
+                        padding: 10px 20px;
+                        background: rgba(170, 170, 170, 0.315);
+                        box-shadow: 0 0 10px rgba(65, 65, 65, 0.329);
+                        transition: 0.3s linear;
+                        a{
+                            color: white;
+                            font-family: $main-font;
+                            transition: 0.3s linear;
+                        }
+                        &:hover{
+                            background: rgba(204, 204, 204, 0.623);
+                            a{
+                                color: #444;
+                            }
+                        }
+                    }
+                    button.btnGender:last-child{
+
+                        margin-left: 24px;
+                    }
+                }
+            }
+        }
+
+        div.carousel-item.mulherModelo {
+            background-position-x: -110px;
+        }
+
+        @for $i from 1 through $qnt {
+            div.carousel-item[data-position="#{$i}"] {
+                position: absolute;
+                background-size: cover;
+                background-repeat: no-repeat;
+                height: 100%;
+                width: 100%;
+                z-index: ($qnt + 1) - $i;
+            }
+        }
+        div.controls{
+            position: absolute;
+            z-index: 800;
+            bottom: 30px;
+            right: 30px;
+        }
+        .controls button {
+            width: 50px;
+            height: 50px;
+            background: #aaaaaa26;
+            box-shadow: 0 0 10px rgba(65, 65, 65, 0.329);
+            border: 1px solid white;
+        }
+        .controls button:first-child{
+            margin-right:10px;
+        }
+    }
+}
+
+@media only screen and (min-width: $breakpoint-tablets) {
+    section#apresentation-carousel {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 500px;
+        margin: 0 40px;
+
+        div.carousel-container {
+            position: absolute;
+            width: 88%;
+            height: 100%;
+            opacity: 1;
+            $qnt: 10;
+
+            div.carousel-item {
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                padding-right: 100px;
+
+                div.container-text-carousel {
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    div.absItem {
+                        display: flex!important;
+                        position: absolute;
+                        top: 5px;
+                        left: 320px;
+                        align-items: center;
+
+                        div.line {
+                            background: white;
+                            width: 145px;
+                            height: 1px;
+                        }
+
+                        span {
+                            margin-left: 10px;
+                            color: white;
+                            font-family: $main-font;
+                        }
+                    }
+
+                    p,
+                    h1,
+                    h3 {
+                        color: white;
+                        font-family: $main-font;
+                        text-shadow: 0 0 10px black;
+                    }
+
+                    h1 {
+                        font-size: 85px;
+                        font-weight: 900;
+                    }
+
+                    h3 {
+                        font-size: 25px;
+                        font-weight: 200;
+                    }
+
+                    p {
+                        max-width: 250px;
+
+                    }
+                    div.buttons{
+                        button.btnGender{
+                            padding: 10px 40px;
+                            background: #aaaaaa26;
+                            box-shadow: 0 0 10px rgba(65, 65, 65, 0.329);
+                        }
+                    }
+                }
+            }
+
+            @for $i from 1 through $qnt {
+                div.carousel-item[data-position="#{$i}"] {
+                    position: absolute;
+                    background-size: cover;
+                    background-position-x: center;
+                    background-repeat: no-repeat;
+                    height: 100%;
+                    width: 100%;
+
+                    @if $i !=1 {
+                        opacity: 0;
+                    }
+
+                    z-index: ($qnt + 1) - $i;
+                }
+            }
+        }
+    }
+}
+
+.fade-in {
+    animation: fadeIn 0.5s linear;
+}
+
+.fade-out {
+    animation: fadeOut 0.5s linear;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
     }
 }
